syntax = "proto3";

package codesourcerer.genai;

option go_package = "protobuf/generated";

service GenAiService {
  rpc GenerateTestFiles(GithubContextRequest) returns (GeneratedTestsResponse) {}
}

message SourceFileDependencyPayload {
  string name = 1;
  string content = 2;
}

message SourceFilePayload {
  string path = 1;
  string content = 2;
  repeated SourceFileDependencyPayload dependencies = 3;
}

message BasicConfig  {
  string test_directory = 1;
  bool comments = 2;
  string testing_framework = 4;
  bool water_mark = 5;
}

message Configuration {
  BasicConfig configuration = 1;
  map<string,string> extras = 2;
}

message GithubContextRequest {
  string merge_id = 1;
  string context = 2;
  Configuration config = 3;
  repeated SourceFilePayload files = 4;
}

message TestFilePayload {
  string testname = 1;
  string testfilepath = 2;
  string parentpath = 3;
  string code = 4;
}

message GeneratedTestsResponse {
  repeated TestFilePayload tests = 1;
}